fixing input field on mobile

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 300;
-  line-height: 18px;
+  line-height: 20px;
   order: 1;
   padding: 10px;
 }
@@ -276,4 +276,11 @@ body {
   height: 100% !important;
   border: none;
   background-color: transparent !important;
+}
+
+@media only screen and (max-width: 425px) {
+  .ashby-application-form-field-entry:nth-last-child(-n + 2) input, 
+  .ashby-application-form-field-entry:nth-last-child(4) input {
+    line-height: 34px;
+  }
 }
